--- a/size.html
+++ b/size.html
@@ -8,7 +8,7 @@
                width:500px;
                height:400px;
                margin:30px;
-               padding:20px;ls
+               padding:20px;
            }
         </style>
     </head>
